text and UX updates

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="intro-about">
-            <p class="intro-text">Front End Developer</p>
+            <p class="intro-text">Frontend Developer</p>
         </div>
 
         <div class="intro-social">
@@ -82,7 +82,7 @@
 
         <div class="about-me-field">
             <p class="about-me-text">Hi!</p>
-            <p class="about-me-text">I'm self-taught Front End Developer. Have fun learning new and improving my skills
+            <p class="about-me-text">I'm self-taught Frontend Developer. Have fun learning new and improving my skills
                 to become a FE ninja.</p>
         </div>
     </div>
@@ -100,11 +100,9 @@
 
                 <div id="timeline-card1" class="timeline-card timeline-card-left card-decoration">
                     <p class="timeline-title-text">August 1993</p>
-                    <p class="timeline-description-text">I was born in <span
-                            class="text-decoration-remover text-decoration-underline">Yaroslavl, Russia<a
-                            href="https://en.wikipedia.org/wiki/Yaroslavl"
-                            target="_blank">
-                        <img class="external-link-img" src="images/external-link.svg"></a></span>.</p>
+                    <p class="timeline-description-text">I was born in <a
+                            class="text-decoration-remover text-decoration-nav-onsite"
+                            href="https://en.wikipedia.org/wiki/Yaroslavl" target="_blank">Yaroslavl, Russia</a>.</p>
                 </div>
             </div>
 
@@ -132,7 +130,9 @@
                     <p class="timeline-title-text">September 2011 - July 2015</p>
                     <p class="timeline-description-text">Got Bachelor degree in Economics in Financial University under
                         the Government of the Russian Federation. During the study was working as intern in Procurement
-                        Department.</p>
+                        Department in <a
+                                class="text-decoration-remover text-decoration-nav-onsite"
+                                href="https://www.gazprom-neft.com/" target="_blank">Gazprom Neft PJSC</a>.</p>
                 </div>
             </div>
 
@@ -146,8 +146,8 @@
                 <div id="timeline-card4" class="timeline-card timeline-card-right card-decoration">
                     <p class="timeline-title-text">April 2014 - December 2018</p>
                     <p class="timeline-description-text">From April 2014 to September 2017 worked for <a
-                                class="text-decoration-remover text-decoration-nav-onsite"
-                                href="https://supply.gazprom-neft.com/" target="_blank">Gazpromneft-Snabzhenie LLC</a>
+                            class="text-decoration-remover text-decoration-nav-onsite"
+                            href="https://supply.gazprom-neft.com/" target="_blank">Gazpromneft-Snabzhenie LLC</a>
                         as Project Administrator of investment projects in Deputy Department. My
                         main responsibility was to monitor the implementation of investment projects, calculate their
                         profitability for the company and mitigate project risks.
@@ -172,11 +172,12 @@
                 <div id="timeline-card5" class="timeline-card timeline-card-left card-decoration">
                     <p class="timeline-title-text">January 2019 - March 2019</p>
                     <p class="timeline-description-text">Realized that completely get bored of the paperwork and
-                        focused on changing my career tp become Software Developer. Chose Front End as my specialisation
+                        focused on changing my career tp become Software Developer. Chose Frontend as my specialisation
                         because I always want to see visual outcome of my work.</p>
-                    <p class="timeline-description-text">I started with watching courses on different online platforms:</p>
+                    <p class="timeline-description-text">I started with watching courses on different online
+                        platforms:</p>
                     <ul>
-                        <li class="timeline-description-text-listed">DEV237x: Microsoft Professional Program: Front End
+                        <li class="timeline-description-text-listed">DEV237x: Microsoft Professional Program: Frontend
                             Web Development by EdX
                         </li>
                         <li class="timeline-description-text-listed">W3Cx - HTML5.0x: HTML5 and CSS Fundamentals by
@@ -190,11 +191,12 @@
                             EdX
                         </li>
                     </ul>
-                    <p class="timeline-description-text">Then understood that need more practice in coding than my courses homework.
+                    <p class="timeline-description-text">Then understood that need more practice in coding than my
+                        courses homework.
                         So in February 2020 developed my first
                         pet
                         project. You can take a look at it <a class="text-decoration-remover text-decoration-nav-onsite"
-                                                       href="#moon-project">here in portfolio</a>.</p>
+                                                              href="#moon-project">here in portfolio</a>.</p>
                 </div>
             </div>
 
@@ -207,7 +209,8 @@
 
                 <div id="timeline-card6" class="timeline-card timeline-card-right card-decoration">
                     <p class="timeline-title-text">March 2019 - November 2019</p>
-                    <p class="timeline-description-text">Excited by what I learned, I decided to move forward in the same direction. I listened to some other courses.
+                    <p class="timeline-description-text">Excited by what I learned, I decided to move forward in the
+                        same direction. I listened to some other courses.
                     </p>
                     <ul>
                         <li class="timeline-description-text-listed">Microsoft - DEV234x: Asynchronous Programming with
@@ -231,7 +234,8 @@
                         about cocktails written from scratch.
                     </p>
                     <p class="timeline-description-text">In parallel to the pet project I started to learn basics of
-                        strongly typed languages. In particular, <code class="code-text">TypeScript</code> and one of the most popular
+                        strongly typed languages. In particular, <code class="code-text">TypeScript</code> and one of
+                        the most popular
                         framework <code class="code-text">React</code>.
                     </p>
                     <ul>
@@ -263,7 +267,7 @@
                         supports and distributes its own IT solutions to automate the activities of logistics companies.
                         They created and maintains a huge project for monitoring of supply chain in logistic.</p>
                     <p class="timeline-description-text">I was not involved in any decisions
-                        around product and most of my work day was fixing various types of bugs.  </p>
+                        around product and most of my work day was fixing various types of bugs. </p>
                     <p class="timeline-description-text">Project was written mostly in <code class="code-text">Vanilla
                         JS</code> with
                         <code class="code-text">Backbone.js</code> library with <code
@@ -287,11 +291,15 @@
                         collaboration and
                         project management cloud base service. It allows users to plan projects, prioritize tasks, track
                         their progress schedule and interact with the team.</p>
-                    <p class="timeline-description-text">Worked on dashboard views representation and filtering features.
-                        We followed Agile methodology with transparent
-                        goals and soft deadlines. All new features were developed as micro frontends. I was happy to take
-                        part in one of them that greatly improves user experience.</p>
-                    <p class="timeline-description-text">There was one disadvantage in working here - extremely unpopular technology stack:<code
+                    <p class="timeline-description-text">Worked on dashboard views representation and filtering
+                        features. We followed Agile methodology with transparent goals and soft deadlines. All new
+                        features were developed as <a
+                                class="text-decoration-remover text-decoration-nav-onsite"
+                                href="https://martinfowler.com/articles/micro-frontends.html" target="_blank"><code
+                                class="code-text">Micro Frontends</code></a>. I was happy to take part in one of them
+                        that greatly improves user experience.</p>
+                    <p class="timeline-description-text">There was one disadvantage in working here - extremely
+                        unpopular technology stack:<code
                                 class="code-text">Dart</code> with <code
                                 class="code-text">Angular</code> and <code
                                 class="code-text">Redux</code>.</p>
@@ -324,8 +332,9 @@
 
                 <div id="timeline-card10" class="timeline-card timeline-card-right card-decoration">
                     <p class="timeline-title-text">October 2020 - Present</p>
-                    <p class="timeline-description-text">At that time my husband got a job in Amsterdam and we moved here.
-                        I decided that the best and most productive way to get job in Amsterdam will be joining<a
+                    <p class="timeline-description-text">At that time my husband got a job in Amsterdam and we moved
+                        here.
+                        I decided that the best and most productive way to get job in Amsterdam will be joining <a
                                 class="text-decoration-remover text-decoration-nav-onsite"
                                 href="https://codaisseur.com/" target="_blank">Codaisseur</a> academy Full stack
                         courses.</p>
@@ -345,7 +354,8 @@
                     <img class="project-img" src="images/moon_project.jpg">
                 </div>
                 <p class="section-card">Moon project was the first project that I made on my own. I just
-                    watched plenty of online courses and read tons of documentation before working on it. I really proud of it because when
+                    watched plenty of online courses and read tons of documentation before working on it. I really proud
+                    of it because when
                     I look at its naivety and imperfection and compare it with my current level it reminds me how far
                     person could go if they has a dream.</p>
                 <p class="section-card">Used technologies and languages:</p>
@@ -360,7 +370,8 @@
                     <a class="text-decoration-remover text-decoration-underline"
                        href="https://github.com/YanaTrifonova/moonProject"
                        target="_blank">
-                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on Github</a>
+                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on
+                        Github</a>
                 </div>
             </div>
 
@@ -369,9 +380,15 @@
                 <div class="project-img-holder">
                     <img class="project-img" src="images/shark_logo.png">
                 </div>
-                <p class="section-card">Cocktail blog is a custom blog with  WYSIWYG editor summernote. I
+                <p class="section-card">Cocktail blog is a custom blog with WYSIWYG editor <a
+                        class="text-decoration-remover text-decoration-underline"
+                        href="https://summernote.org/"
+                        target="_blank"><code class="code-text">summernote<img
+                        class="project-link-img external-link-img external-link-img-decor"
+                        src="images/external-link.svg"></code></a>. I
                     was focused on interaction with Backend. I tried to apply BEM
-                    methodology, used <code class="code-text">CSS</code> preprocessors and <code class="code-text">Sass</code>.
+                    methodology, used <code class="code-text">CSS</code> preprocessors and <code
+                            class="code-text">Sass</code>.
                     Unfortunately it was quite expensive to keep working on AWS
                     so it was terminated.</p>
                 <p class="section-card">Used technologies and languages:</p>
@@ -386,7 +403,8 @@
                     <a class="text-decoration-remover text-decoration-underline"
                        href="https://github.com/YanaTrifonova/cocktail_blog"
                        target="_blank">
-                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on Github</a>
+                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on
+                        Github</a>
                 </div>
             </div>
 
@@ -399,8 +417,8 @@
                     <code class="code-text">React</code>. The idea of it is the same as in <a
                             class="text-decoration-remover text-decoration-underline"
                             href="https://youtu.be/dPgKf2EcEK0" target="_blank">
-                        <img class="project-link-img external-link-img external-link-img-decor"
-                             src="images/external-link.svg">this video (You Tube)</a>.</p>
+                        this video (You Tube)</a><img class="project-link-img external-link-img external-link-img-decor"
+                                                      src="images/external-link.svg">.</p>
                 <p class="section-card">These technologies are probably an overkill but the project is great
                     sandbox to learn new languages and frameworks.</p>
                 <p class="section-card">Used technologies and languages:</p>
