--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -28,7 +28,7 @@
         </div>
 
         <button class="header-theme-changer" onclick="onThemeChange()">
-            <img class="header-theme-changer-img" src="images/brightness.svg" alt="Change theme color">
+            <img class="header-theme-changer-img" src="images/other/brightness.svg" alt="Change theme color">
         </button>
 
         <div class="header-block-right">
@@ -40,7 +40,7 @@
 
     <div class="intro-container">
         <div class="intro-avatar">
-            <img class="intro-img" src="images/avatar.jpg" alt="Yana Trifonova">
+            <img class="intro-img" src="images/avatar/avatar.jpg" alt="Yana Trifonova photo">
         </div>
 
         <div class="intro-name">
@@ -55,25 +55,25 @@
             <a class="text-decoration-remover" target="_blank" href="https://github.com/YanaTrifonova">
                 <img id="github" class="social-img" onmouseover="onEnter(this, 'github');"
                      onmouseout="onOut(this, 'github');"
-                     src="images/github_dark.svg" alt="github">
+                     src="images/social/github_dark.svg" alt="github">
             </a>
             <a class="text-decoration-remover" target="_blank"
                href="https://www.linkedin.com/in/yana-trifonova-0920b3179/">
                 <img id="linkedin" class="social-img" onmouseover="onEnter(this, 'linkedin');"
-                     onmouseout="onOut(this, 'linkedin');" src="images/linkedin_dark.svg" alt="linked in">
+                     onmouseout="onOut(this, 'linkedin');" src="images/social/linkedin_dark.svg" alt="linked in">
             </a>
             <a class="text-decoration-remover" target="_blank" href="https://www.instagram.com/yana_trifonova/">
                 <img id="instagram" class="social-img" onmouseover="onEnter(this, 'instagram');"
-                     onmouseout="onOut(this, 'instagram');" src="images/instagram_dark.svg" alt="instagram">
+                     onmouseout="onOut(this, 'instagram');" src="images/social/instagram_dark.svg" alt="instagram">
             </a>
             <a class="text-decoration-remover" href="mailto: trifonova.yana.prof@gmail.com">
                 <img id="mail" class="social-img" onmouseover="onEnter(this, 'mail');" onmouseout="onOut(this, 'mail');"
-                     src="images/mail_dark.svg" alt="e-mail">
+                     src="images/social/mail_dark.svg" alt="e-mail">
             </a>
         </div>
 
         <div id="scroll-item" class="intro-scroll-container">
-            <img class="intro-scroll-img intro-scroll-animation" src="images/mouse-clicker-dark.svg">
+            <img class="intro-scroll-img intro-scroll-animation" src="images/other/mouse-clicker-dark.svg">
         </div>
     </div>
 
@@ -94,7 +94,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item1" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="images/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/baby-stroller.svg">
                     </div>
                 </div>
 
@@ -109,7 +109,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item2" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img src="favicon.ico">
+                        <img  class="timeline-img" src="images/timeline/math.svg">
                     </div>
                 </div>
 
@@ -122,7 +122,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item3" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="images/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/graduated.svg">
                     </div>
                 </div>
 
@@ -139,7 +139,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item4" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img src="favicon.ico">
+                        <img class="timeline-img" src="images/timeline/work.svg">
                     </div>
                 </div>
 
@@ -165,7 +165,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item5" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="images/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/coding.svg">
                     </div>
                 </div>
 
@@ -203,7 +203,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item6" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img src="favicon.ico">
+                        <img class="timeline-img" src="images/timeline/html.svg">
                     </div>
                 </div>
 
@@ -235,8 +235,7 @@
                     </p>
                     <p class="timeline-description-text">In parallel to the pet project I started to learn basics of
                         strongly typed languages. In particular, <code class="code-text">TypeScript</code> and one of
-                        the most popular
-                        framework <code class="code-text">React</code>.
+                        the most popular framework <code class="code-text">React</code>.
                     </p>
                     <ul>
                         <li class="timeline-description-text-listed">Microsoft - DEV273x: Introduction to TypeScript 2
@@ -247,7 +246,6 @@
                             EdX
                         </li>
                         <li class="timeline-description-text-listed">Learn React by Scrimba</li>
-
                     </ul>
                 </div>
             </div>
@@ -255,7 +253,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item7" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="images/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/coding_html.svg">
                     </div>
                 </div>
 
@@ -279,7 +277,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item8" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img src="favicon.ico">
+                        <img class="timeline-img" src="images/timeline/programming.svg">
                     </div>
                 </div>
 
@@ -309,7 +307,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item9" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="images/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/tech_stack.svg">
                     </div>
                 </div>
 
@@ -326,7 +324,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item10" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img src="favicon.ico">
+                        <img class="timeline-img" src="images/timeline/codaisseur.svg">
                     </div>
                 </div>
 
@@ -351,7 +349,7 @@
             <div id="moon-project" class="card card-decoration">
                 <p class="project-name">Moon Project</p>
                 <div class="project-img-holder">
-                    <img class="project-img" src="images/moon_project.jpg">
+                    <img class="project-img" src="images/portfolio/moon_project.jpg">
                 </div>
                 <p class="section-card">Moon project was the first project that I made on my own. I just
                     watched plenty of online courses and read tons of documentation before working on it. I really proud
@@ -370,7 +368,7 @@
                     <a class="text-decoration-remover text-decoration-underline"
                        href="https://github.com/YanaTrifonova/moonProject"
                        target="_blank">
-                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on
+                        <img class="project-link-img external-link-img" src="images/other/external-link.svg">Watch on
                         Github</a>
                 </div>
             </div>
@@ -378,14 +376,14 @@
             <div class="card card-decoration">
                 <p id="cocktail-blog" class="project-name">Cocktail blog</p>
                 <div class="project-img-holder">
-                    <img class="project-img" src="images/shark_logo.png">
+                    <img class="project-img" src="images/portfolio/shark_logo.png">
                 </div>
                 <p class="section-card">Cocktail blog is a custom blog with WYSIWYG editor <a
                         class="text-decoration-remover text-decoration-underline"
                         href="https://summernote.org/"
                         target="_blank"><code class="code-text">summernote<img
                         class="project-link-img external-link-img external-link-img-decor"
-                        src="images/external-link.svg"></code></a>. I
+                        src="images/other/external-link.svg"></code></a>. I
                     was focused on interaction with Backend. I tried to apply BEM
                     methodology, used <code class="code-text">CSS</code> preprocessors and <code
                             class="code-text">Sass</code>.
@@ -403,7 +401,7 @@
                     <a class="text-decoration-remover text-decoration-underline"
                        href="https://github.com/YanaTrifonova/cocktail_blog"
                        target="_blank">
-                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on
+                        <img class="project-link-img external-link-img" src="images/other/external-link.svg">Watch on
                         Github</a>
                 </div>
             </div>
@@ -411,14 +409,14 @@
             <div class="card card-decoration">
                 <p class="project-name">Burger</p>
                 <div class="project-img-holder">
-                    <img class="project-img" src="images/unnamed.png">
+                    <img class="project-img" src="images/portfolio/burger.png">
                 </div>
                 <p class="section-card">Burger is my first project on <code class="code-text">TypeScript</code> with
                     <code class="code-text">React</code>. The idea of it is the same as in <a
                             class="text-decoration-remover text-decoration-underline"
                             href="https://youtu.be/dPgKf2EcEK0" target="_blank">
                         this video (You Tube)</a><img class="project-link-img external-link-img external-link-img-decor"
-                                                      src="images/external-link.svg">.</p>
+                                                      src="images/other/external-link.svg">.</p>
                 <p class="section-card">These technologies are probably an overkill but the project is great
                     sandbox to learn new languages and frameworks.</p>
                 <p class="section-card">Used technologies and languages:</p>
@@ -431,7 +429,7 @@
                 </ul>
                 <div class="project-link">
                     <a class="text-decoration-remover text-decoration-underline">
-                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on Github
+                        <img class="project-link-img external-link-img" src="images/other/external-link.svg">Watch on Github
                         (still in development)</a>
                 </div>
             </div>
@@ -442,17 +440,17 @@
         <p class="footer-contact-me-text">Contact me:</p>
         <div class="footer-social">
             <a class="text-decoration-remover" target="_blank" href="https://github.com/YanaTrifonova">
-                <img class="social-img" src="images/github_dark.svg" alt="github">
+                <img class="social-img" src="images/social/github_dark.svg" alt="github">
             </a>
             <a class="text-decoration-remover" target="_blank"
                href="https://www.linkedin.com/in/yana-trifonova-0920b3179/">
-                <img class="social-img" src="images/linkedin_dark.svg" alt="linked in">
+                <img class="social-img" src="images/social/linkedin_dark.svg" alt="linked in">
             </a>
             <a class="text-decoration-remover" target="_blank" href="https://www.instagram.com/yana_trifonova/">
-                <img class="social-img" src="images/instagram_dark.svg" alt="instagram">
+                <img class="social-img" src="images/social/instagram_dark.svg" alt="instagram">
             </a>
             <a class="text-decoration-remover" href="mailto: trifonova.yana.prof@gmail.com">
-                <img class="social-img" src="images/mail_dark.svg" alt="e-mail">
+                <img class="social-img" src="images/social/mail_dark.svg" alt="e-mail">
             </a>
         </div>
     </footer>
