--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item2" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img  class="timeline-img" src="images/timeline/math.svg">
+                        <img class="timeline-img" src="images/timeline/math.svg">
                     </div>
                 </div>
 
@@ -128,9 +128,11 @@
 
                 <div id="timeline-card3" class="timeline-card timeline-card-left card-decoration">
                     <p class="timeline-title-text">September 2011 - July 2015</p>
-                    <p class="timeline-description-text">Got Bachelor degree in Economics in Financial University under
-                        the Government of the Russian Federation. During the study was working as intern in Procurement
-                        Department in <a
+                    <p class="timeline-description-text">Moved to <a
+                            class="text-decoration-remover text-decoration-nav-onsite"
+                            href="http://www.visit-petersburg.ru/en/#" target="_blank">Saint Petersburg</a> to get
+                        Bachelor degree in Economics in Financial University under the Government of the Russian
+                        Federation. During the study was working as intern in Procurement Department in <a
                                 class="text-decoration-remover text-decoration-nav-onsite"
                                 href="https://www.gazprom-neft.com/" target="_blank">Gazprom Neft PJSC</a>.</p>
                 </div>
@@ -155,7 +157,8 @@
                     <p class="timeline-description-text">Form October 2017 to December 2018 worked as chief specialist
                         of the investment department of <a
                                 class="text-decoration-remover text-decoration-nav-onsite"
-                                href="https://www.mrsksevzap.ru/" target="_blank">MRSK</a>. I managed the consolidated
+                                href="https://www.mrsksevzap.ru/en/" target="_blank">MRSK</a>. I managed the
+                        consolidated
                         register of
                         projects and provided
                         various reports to senior management.</p>
@@ -329,7 +332,7 @@
                 </div>
 
                 <div id="timeline-card10" class="timeline-card timeline-card-right card-decoration">
-                    <p class="timeline-title-text">October 2020 - Present</p>
+                    <p class="timeline-title-text">October 2020 - present</p>
                     <p class="timeline-description-text">At that time my husband got a job in Amsterdam and we moved
                         here.
                         I decided that the best and most productive way to get job in Amsterdam will be joining <a
@@ -415,8 +418,8 @@
                     <code class="code-text">React</code>. The idea of it is the same as in <a
                             class="text-decoration-remover text-decoration-underline"
                             href="https://youtu.be/dPgKf2EcEK0" target="_blank">
-                        this video (You Tube)</a><img class="project-link-img external-link-img external-link-img-decor"
-                                                      src="images/other/external-link.svg">.</p>
+                        this video (YouTube)</a><img class="project-link-img external-link-img external-link-img-decor"
+                                                     src="images/other/external-link.svg">.</p>
                 <p class="section-card">These technologies are probably an overkill but the project is great
                     sandbox to learn new languages and frameworks.</p>
                 <p class="section-card">Used technologies and languages:</p>
@@ -428,9 +431,11 @@
                     <li class="timeline-description-text-listed"><code class="code-text">Redux</code></li>
                 </ul>
                 <div class="project-link">
-                    <a class="text-decoration-remover text-decoration-underline">
-                        <img class="project-link-img external-link-img" src="images/other/external-link.svg">Watch on Github
-                        (still in development)</a>
+                    <a class="text-decoration-remover text-decoration-underline"
+                       href="https://github.com/YanaTrifonova/burger"
+                       target="_blank">
+                        <img class="project-link-img external-link-img" src="images/other/external-link.svg">Watch on
+                        Github (still in development)</a>
                 </div>
             </div>
         </div>
